# attractor

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: condition.rs  error.rs  events.rs  graph.rs  interviewer.rs  lib.rs  main.rs  stylesheet.rs  testing.rs  transform.rs  validation.rs
src/engine/: edge_selection.rs  goal_gate.rs  mod.rs  retry.rs
src/handler/: codergen.rs  conditional.rs  exit.rs  fan_in.rs  manager_loop.rs  mod.rs  parallel.rs  start.rs  tool.rs  wait_human.rs
src/parser/: lexer.rs  mod.rs  values.rs
src/state/: artifact.rs  checkpoint.rs  context.rs  fidelity.rs  mod.rs  preamble.rs
tests/: parse_real_dot_files.rs
