[package]
name = "attractor"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "DOT-based AI pipeline runner"
license = "MIT"
repository = "https://github.com/bkrabach/attractor"

[dependencies]
unified-llm       = { git = "https://github.com/bkrabach/unified-llm.git" }
coding-agent-loop = { git = "https://github.com/bkrabach/coding-agent-loop.git" }
tokio        = { version = "1",    features = ["rt-multi-thread", "macros", "time", "fs", "process", "io-util"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
async-trait  = "0.1"
futures      = "0.3"
thiserror    = "2"
chrono       = { version = "0.4",  features = ["serde"] }
uuid         = { version = "1",    features = ["v4"] }
tracing      = "0.1"
tokio-util   = { version = "0.7" }
nom          = "8"
indexmap     = { version = "2",    features = ["serde"] }

[dev-dependencies]
tokio    = { version = "1",  features = ["rt-multi-thread", "macros"] }
anyhow   = "1"
proptest = "1"
tempfile = "3"
